--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Xiaoyan Zhuo (XYZ)</h1>
-				<p>I'm a PhD candidate of Computer Engineer from <em>UML</em> <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi, I'm Xiaoyan Zhuo (XYZ)</h1>
+				<p>I'm a PhD candidate of Computer Engineer from <em>UML</em> <a href="/about">Read more about me...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
