try jekyll bundler

--- a/index.html
+++ b/index.html
@@ -1,28 +1,9 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi, I'm Xiaoyan Zhuo (XYZ)</h1>
-				<p>I'm a PhD candidate of Computer Engineer from <em>UML</em> <a href="/about">Read more about me...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:Xiaoyan_Zhuo@student.uml.edu">email</a></li>
-        		<li><a href="https://github.com/xiaoyanzhuo">github.com/xiaoyanzhuo</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: xyzhuo
+---
+
+		<div class="blurb">
+			<h1>Hi, I'm Xiaoyan Zhuo!</h1>
+			<p>I'm a PhD candidate of Computer Engineer from <em>UML</em> <a href="/about">Read more about me...</a></p>
+		</div> 
